# aafc2wav

./: .gitignore  CMakeLists.txt  README.md
include/: aafc.h  fileutils.h  libaafcfunc.h
src/: aafc2wav.cpp
